finish Namecard APIs
