# config/swagger.yml
@@ -42,14 +42,8 @@ paths:
     get:
       tags:
         - Namecard
-      summary: Get all Namecards by User id
-      operationId: namecard_getByUserId
-      parameters:
-        - name: userId
-          type: string
-          in: query
-          required: false
-          description: The user id
+      summary: Get all Namecards of current User
+      operationId: namecard_getByCurrentUserId
       responses:
         '200':
           description: OK
@@ -110,14 +104,8 @@ paths:
     get:
       tags:
         - Cardcase
-      summary: Get Cardcase by User id
-      operationId: cardcase_get
-      parameters:
-        - name: userId
-          type: string
-          in: query
-          required: false
-          description: The user id
+      summary: Get all Cardcases of current User
+      operationId: cardcase_getByCurrentUserId
       responses:
         '200':
           description: OK
@@ -280,6 +268,8 @@ definitions:
         type: string
       wxOpenId:
         type: string
+      cardcaseId:
+        type: string
       token:
         type: string
   Namecard:
@@ -384,7 +374,7 @@ definitions:
 parameters:
   EntityId:
     name: id
-    type: integer
+    type: string
     in: path
     description: The entity id
     required: true
