# data/namecard.js
@@ -1,31 +1,35 @@
 'use strict';
-var HttpError = require('http-error');
+var HttpError = require('http-errors');
 var Validator = require('./validator/validator.js');
+var db = require('../models');
 var Mockgen = require('./mockgen.js');
 /**
  * Operations on /namecard
  */
 module.exports = {
     /**
-     * summary: Get all Namecards by User id
+     * summary: Get all Namecards by current User
      * description: 
-     * parameters: userId
+     * parameters: 
      * produces: 
      * responses: 200
-     * operationId: namecard_getByUserId
+     * operationId: namecard_getByCurrentUserId
      */
     get: {
         200: function (req, res, callback) {
-
-            /**
-             * Using mock data generator module.
-             * Replace this by actual data for the api.
-             */
-            Mockgen().responses({
-                path: '/namecard',
-                operation: 'get',
-                response: '200'
-            }, callback);
+            db.Namecard.findAll({
+                where: {
+                    userId: req.session.userId,
+                }
+            }).then(namecardList => {
+                return callback(null, {
+                    responses: namecardList
+                });
+            }).catch(db.sequelize.Error, err => {
+                return callback(new HttpError.InternalServerError(err));
+            }).catch(err => {
+                return callback(err);
+            });
         }
     },
     /**
@@ -38,13 +42,19 @@ module.exports = {
      */
     post: {
         200: function (req, res, callback) {
-            Validator.sessionUserIdEqualsBodyUserId(
-                req,
-                () => {
-
-                },
-                () => {
-                    callback(new HttpError.Unauthorized('Illegal Request'));
+            var namecard = req.body;
+            delete namecard.id;
+            namecard.userId = req.session.userId
+            return db.Namecard.create(namecard)
+                .then(created => {
+                    return callback(null, {
+                        responses: created
+                    })
+                })
+                .catch(db.sequelize.Error, err => {
+                    return callback(new HttpError.InternalServerError(err));
+                }).catch(err => {
+                    return callback(err);
                 });
         }
     },
@@ -58,14 +68,34 @@ module.exports = {
      */
     put: {
         200: function (req, res, callback) {
-            Validator.sessionUserIdEqualsBodyUserId(
-                req,
-                () => {
-
-                },
-                () => {
-                    callback(new HttpError.Unauthorized('Illegal Request'));
+            var namecard = req.body;
+            return db.Namecard.findOne({
+                where: {
+                    id: namecard.id,
+                    userId: req.session.userId,
+                }
+            }).then(original => {
+                if (original) {
+                    // Update attributes
+                    for (var attr in namecard) {
+                        if (original.hasOwnProperty(attr)) {
+                            original[attr] = namecard[attr];
+                        }
+                    }
+                    return original.save();
+                }
+                else {
+                    throw new HttpError.NotFound();
+                }
+            }).then(updated => {
+                callback({
+                    responses: updated
                 });
+            }).catch(db.sequelize.Error, err => {
+                return callback(new HttpError.InternalServerError(err));
+            }).catch(err => {
+                return callback(err);
+            });
         }
     }
 };
